started working with chrome.storage.session

--- a/Safari Extension CORS Extension/Resources/manifest.json
+++ b/Safari Extension CORS Extension/Resources/manifest.json
@@ -64,7 +64,7 @@
         }
     },
 
-    "permissions": ["cookies"],
+    "permissions": ["cookies", "storage"],
     "host_permissions": [
       "https://*.salesforce.com/*",
       "https://*.force.com/*",
